--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -5,6 +5,11 @@ body {
 	background-color: #f5f5f5;
 }
 
+.error-msg {
+	margin-top: 3px;
+	font-weight: bold;
+}
+
 .container {
 	padding: 50px;
 }
@@ -82,3 +87,4 @@ html,body {
 		padding-right: 20px;
 	}
 }
+
