--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -28,6 +28,10 @@ body {
 	box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
 }
 
+.form-table {
+	max-width: 600px;
+}
+
 .form-signin {
 	max-width: 300px;
 	padding: 19px 29px 29px;
